--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <title>quiz</title>
 </head>
 <body>
-
+<h1>Queez</h1>
 </body>
 </html>
