added added simple frontend part to my app

--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,15 @@
 </head>
 <body>
 <h1>Queez</h1>
+<h2>Poprawne odpowiedzi: <span id="good-answers">0</span></h2>
+
+<div id="question"></div>
+
+<button id="answer1"></button>
+<button id="answer2"></button>
+<button id="answer3"></button>
+<button id="answer4"></button>
+
+<script src="script.js"></script>
 </body>
 </html>
