--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,14 @@
 <h1>Queez</h1>
 <h2>Poprawne odpowiedzi: <span id="good-answers">0</span></h2>
 
-<div id="question"></div>
+<div id="game-board">
+    <div id="question"></div>
 
-<button id="answer1" data-answer="0"></button>
-<button id="answer2" data-answer="1"></button>
-<button id="answer3" data-answer="2"></button>
-<button id="answer4" data-answer="3"></button>
+    <button id="answer1" data-answer="0"></button>
+    <button id="answer2" data-answer="1"></button>
+    <button id="answer3" data-answer="2"></button>
+    <button id="answer4" data-answer="3"></button>
+</div>
 
 <script src="script.js"></script>
 </body>
